--- a/projects.html
+++ b/projects.html
@@ -17,7 +17,7 @@
     </div>
     <nav>
         <ul id="navigation">
-            <li><a href="home.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="projects.html">Projects</a></li>
             <li><a href="resume.html">Resume</a></li>
         </ul>
